--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <script src="sketch.js" type="text/javascript"></script>
     <script src="lib/p5.js" type="text/javascript"></script>
     <script src="lib/p5.dom.js" type="text/javascript"></script>
+	<script src="lib/text_blob.js" type="text/javascript"></script>    
   </head>
   <body>
   </body>
