--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <script src="sketch.js" type="text/javascript"></script>
     <script src="lib/p5.js" type="text/javascript"></script>
     <script src="lib/p5.dom.js" type="text/javascript"></script>
-	<script src="lib/text_blob.js" type="text/javascript"></script>    
+	<script src="lib/text_blob.js" type="text/javascript"></script>
+	<script src="lib/lodash.js"></script>    
   </head>
   <body>
   </body>
